# GPU

CPU_plugin/: CMakeLists.txt  Readme.txt  add_kernel.cc  runtime.cc  setup.py.in  simple_test.py
OneDNN/: build_one_api.sh
OneDNN/run/: Makefile
OneDNN/sycl_integration/: Makefile  elemwise_mul.cpp  load.sh  main.cpp
OpenCL/: Makefile
